# repo-template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  Makefile  README.md  justfile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.prod.txt  requirements.uvmirror.txt
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot-prs.yml  main.yml  setup.yml  update-dependencies.yml  uvmirror-check.yml
docker/: .env  Dockerfile  dependencies-build.txt  docker-compose.yml  justfile
docker/entrypoints/: dev.sh
scripts/: do  setup_functions
tests/: test_repo.py
tests/template/: conftest.py  test_upgrade.py
